eliminar esapcios y minusculas

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -280,6 +280,17 @@
     "\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminar espacios y convertir en minúsculas\n",
+    "\n",
+    "df[\"review\"] = df[\"review\"].str.strip().str.lower()\n"
+   ]
   }
  ],
  "metadata": {
