train test split

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -164,6 +164,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop package_name\n",
+    "\n",
+    "df.drop('package_name', axis=1, inplace= True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -268,16 +280,12 @@
        "[891 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Drop package_name\n",
-    "\n",
-    "df= df.drop('package_name', axis=1)\n",
-    "\n",
     "df"
    ]
   },
@@ -285,11 +293,133 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>polarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>privacy at least put some option appear offlin...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>messenger issues ever since the last update, i...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>profile any time my wife or anybody has more t...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>the new features suck for those of us who don'...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>forced reload on uploading pic on replying com...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>loved it i loooooooooooooovvved it because it ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>all time legendary game the birthday party lev...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>ads are way to heavy listen to the bad reviews...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>fun works perfectly well. ads aren't as annoyi...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>they're everywhere i see angry birds everywher...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>891 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                review  polarity\n",
+       "0    privacy at least put some option appear offlin...         0\n",
+       "1    messenger issues ever since the last update, i...         0\n",
+       "2    profile any time my wife or anybody has more t...         0\n",
+       "3    the new features suck for those of us who don'...         0\n",
+       "4    forced reload on uploading pic on replying com...         0\n",
+       "..                                                 ...       ...\n",
+       "886  loved it i loooooooooooooovvved it because it ...         1\n",
+       "887  all time legendary game the birthday party lev...         1\n",
+       "888  ads are way to heavy listen to the bad reviews...         0\n",
+       "889  fun works perfectly well. ads aren't as annoyi...         1\n",
+       "890  they're everywhere i see angry birds everywher...         1\n",
+       "\n",
+       "[891 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['review'] =  df[\"review\"].str.strip().str.lower()\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Eliminar espacios y convertir en minúsculas\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "df[\"review\"] = df[\"review\"].str.strip().str.lower()\n"
+    "X = df['review']\n",
+    "y = df['polarity']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size = 0.2, random_state= 42)"
    ]
   }
  ],
