guardar mejor modelo

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -1866,16 +1866,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bootstrap': False, 'max_depth': 7, 'n_estimators': 50}"
+       "{'bootstrap': False, 'max_depth': None, 'n_estimators': 100}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1886,7 +1886,7 @@
     "grid = {\n",
     "    'n_estimators':[50,100,150,200],\n",
     "    'bootstrap':[True,False],\n",
-    "    'max_depth': [5,6,7]\n",
+    "    'max_depth': [5,6,None]\n",
     "}\n",
     "\n",
     "grid_search = GridSearchCV(model4,grid,scoring= 'accuracy',cv=5)\n",
@@ -1898,10 +1898,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8100558659217877"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_rf_model = grid_search.best_estimator_\n",
+    "\n",
+    "accuracy_score(best_rf_model.predict(X_test_vec),y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#guardar el mejor modelo.\n",
+    "\n",
+    "from pickle import dump\n",
+    "\n",
+    "dump(model,open('../models/multinominal_NB_default.sav','wb'))"
+   ]
   }
  ],
  "metadata": {
